   :local:
   :backlinks: none
   :depth: 1
   :class: singlecol

.. _ent-op-1.18.x:

|k8s-op-full| 1.18 Series
-------------------------

.. _ent_op-1.18.0:

|k8s-op-full| 1.18.0
~~~~~~~~~~~~~~~~~~~~

*Released 2022-12-29*

Improvements
````````````

- Adds support for ``SCRAM-SHA-1`` for user and MongoDB Agent
  authentication. To enable either authentication, use ``MONGODB-CR``
  and ``SCRAM-SHA-1`` in the authentication modes.

- Adds support for the following features for OpsManager Backup configuration:
  
  - KMIP Backup Configuration support through the
    ``spec.backup.encryption.kmip`` parameter in
    :opsmgrkube:`OpsManager <spec.backup.encryption.kmip>`
    and :setting:`MongoDB resources <spec.backup.encryption.kmip>`. To
    learn more, see :ref:`configure-kmip-backup-encryption`.
  - Backup Assignment Labels settings in
    ``spec.backup.[*].assignmentLabels`` elements of the OpsManager
    resource.
  - Backup Snapshot Schedule configuration through the
    :setting:`spec.backup.snapshotSchedule` parameter in the OpsManager
    resource. To learn more, see :ref:`back-up-mdb-resources`.

- Adds support for disaster recovery in |multi-clusters|, which are in
  the beta release. To learn more, see :ref:`disaster-recovery-ref` and
  :ref:`multi-cluster-cli-reference-ref`.

MongoDB Resource
`````````````````

- Adds documentation for
  :setting:`spec.additionalMongodConfig.net.tls.disabledProtocols`.

Bug Fixes
`````````

- Fixes the issue where you configure a liveness probe and it reports a
  positive result when you terminate a MongoDB Agent's process. This
  could cause Pods hosting MongoDB resources to run without the
  Automation Agent. In addition to this fix, consider configuring 
  :ref:`readiness probe overrides <readiness-probe-override>`.  

- Fixes the startup script in database Pod that might report errors when
  the Pod restarts.

.. _ent-op-1.17.x:

|k8s-op-full| 1.17 Series
-------------------------

.. _ent_op-1.17.2:
