@@ -673,7 +673,10 @@ directive: setting
 optional: true
 description: |
   Specifies the authentication mechanism that your MongoDB deployment 
-  uses. Valid values are ``SCRAM``, ``X509``, and ``LDAP``.
+  uses. Valid values are ``SCRAM``, ``SCRAM-SHA-1``, ``MONGODB-CR``, 
+  ``X509``, and ``LDAP``. We recommend ``SCRAM-SHA-256`` (``SCRAM``) 
+  over ``SCRAM-SHA-1``. If you specify ``SCRAM-SHA-1``, you must also 
+  specify ``MONGODB-CR``.
 
   .. admonition:: X.509 Internal Cluster Authentication
      :class: note
@@ -1132,9 +1135,12 @@ directive: setting
 description: |
 
   The authentication mechanism that the {+mdbagent+}s for
-  your MongoDB deployment use. Valid values are ``SCRAM``, ``X509``, and
+  your MongoDB deployment use. Valid values are ``SCRAM``, 
+  ``SCARM-SHA-1``, ``MONGODB-CR``, ``X509``, and
   ``LDAP``. The value you specify must also be present in
-  :setting:`spec.security.authentication.modes`.
+  :setting:`spec.security.authentication.modes`. We recommend 
+  ``SCRAM-SHA-256`` (``SCRAM``) over ``SCRAM-SHA-1``. If you specify 
+  ``SCRAM-SHA-1``, you must also specify ``MONGODB-CR``.
 
   This setting is required if you specified more than one value for
   :setting:`spec.security.authentication.modes`.
