@@ -108,7 +108,7 @@ MongoDBUser to the following command:
 Change Authentication Mechanism
 -------------------------------
 
-To change your user authenication from SCRAM to X.509:
+To change your user authenication mechanism to SCRAM:
 
 1. Disable authentication.
 
@@ -129,7 +129,8 @@ To change your user authenication from SCRAM to X.509:
 4. Enable SCRAM authentication.
 
    Under ``spec.security.authentication``, change ``enabled`` to
-   ``true`` and set ``modes`` to ``["SCRAM"]``.
+   ``true`` and set :setting:`spec.security.authentication.modes` to ``
+   ["SCRAM"]``.
 
    .. code-block:: yaml
 
