@@ -29,7 +29,9 @@ Improvements
 
 - Adds support for ``SCRAM-SHA-1`` for user and MongoDB Agent
   authentication. To enable either authentication, use ``MONGODB-CR``
-  and ``SCRAM-SHA-1`` in the authentication modes.
+  and ``SCRAM-SHA-1`` in the
+  :setting:`spec.security.authentication.modes` and 
+  :setting:`spec.security.authentication.agents.mode` settings.
 
 - Adds support for the following features for OpsManager Backup configuration:
   
